--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -15,7 +15,11 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - run: npm run build
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build package
+        run: npm run build
 
       - run: npm publish
         env:
