--- a/.github/workflows/npm-develop.yml
+++ b/.github/workflows/npm-develop.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Build package
         run: npm run build
 
-      - run: npm publish
+      - run: npm publish --tag=next
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
