--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@herowcode/evolution-node-sdk",
-  "version": "1.0.4-4",
+  "version": "1.0.4",
   "private": false,
   "description": "Evolution API Node.JS SDK Wrapper.",
   "main": "dist/index.js",
