publish next tag with latest

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -24,3 +24,7 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - run: npm publish --tag=next
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
